Adding validation rules for subscriptionId/api-version params
