# src/core/AutoRest.Core/Properties/Resources.Designer.cs
@@ -402,6 +402,15 @@ namespace AutoRest.Core.Properties {
         }
         
         /// <summary>
+        ///    Looks up a localized string similar to Parameters &quot;subscriptionId&quot; and &quot;api-version&quot; are not allowed in the operations section of azure swagger specs.
+        /// </summary>
+        public static string OperationParametersNotAllowedMessage {
+            get {
+                return ResourceManager.GetString("OperationParametersNotAllowedMessage", resourceCulture);
+            }
+        }
+        
+        /// <summary>
         ///    Looks up a localized string similar to Parameter &apos;{0}&apos; is not expected..
         /// </summary>
         public static string ParameterIsNotValid {
@@ -425,6 +434,15 @@ namespace AutoRest.Core.Properties {
         public static string ParameterValueIsNotValid {
             get {
                 return ResourceManager.GetString("ParameterValueIsNotValid", resourceCulture);
+            }
+        }
+        
+        /// <summary>
+        ///    Looks up a localized string similar to Parameters &quot;subscriptionId&quot; or &quot;api-version&quot; are referenced but not defined in the parameters section of Service Definition.
+        /// </summary>
+        public static string ServiceDefinitionParametersMissingMessage {
+            get {
+                return ResourceManager.GetString("ServiceDefinitionParametersMissingMessage", resourceCulture);
             }
         }
         
