# src/modeler/AutoRest.Swagger.Tests/Swagger/Validation/positive/clean-complex-spec.json
@@ -179,6 +179,20 @@
       "name": "FooQueryParam",
       "description": "Query parameter for Foo operation",
       "type": "string"
+    },
+    "SubscriptionIdParameter": {
+      "name": "subscriptionId",
+      "in": "path",
+      "required": true,
+      "type": "string",
+      "description": "Gets subscription credentials which uniquely identify Microsoft Azure subscription. The subscription ID forms part of the URI for every service call."
+    },
+    "ApiVersionParameter": {
+      "name": "api-version",
+      "in": "query",
+      "required": true,
+      "type": "string",
+      "description": "Client Api Version."
     }
   },
   "responses": {
